# hw-prelude

./: CHANGELOG.md  README.md  cabal.project  hw-polysemy.cabal  hw-prelude.cabal
.github/workflows/: haskell.yml
src/HaskellWorks/: Either.hs  Error.hs  FilePath.hs  OS.hs  Polysemy.hs  Prelude.hs  Stack.hs  String.hs  ToText.hs  Tuple.hs  Unsafe.hs
src/HaskellWorks/Control/: Monad.hs
src/HaskellWorks/Data/: String.hs
src/HaskellWorks/Error/: Types.hs
src/HaskellWorks/Error/Types/: All.hs  GenericError.hs  JsonDecodeError.hs  RenderedError.hs  TimedOut.hs  YamlDecodeError.hs
src/HaskellWorks/IO/: Network.hs  Process.hs
src/HaskellWorks/IO/Network/: NamedPipe.hs  Port.hs  Socket.hs
src/HaskellWorks/IO/Win32/: NamedPipe.hsc
