cabal-version:          3.4
name:                   hw-polysemy
version:                0.1.0.0
synopsis:               Opinionated assorted polysemy libraries
description:            Opinionated assorted polysemy libraries.
license:                Apache-2.0
license-file:           LICENSE
author:                 John Ky
maintainer:             newhoggy@gmail.com
copyright:              2024 John Ky
category:               Development
build-type:             Simple
extra-doc-files:        CHANGELOG.md
extra-source-files:     README.md

common base                       { build-depends: base                       >= 4.18.2.1   && < 5      }

common hw-polysemy                { build-depends: hw-polysemy                                          }

common project-config
  ghc-options:          -Wall

library
  import:               base, project-config,
  exposed-modules:      HaskellWorks.Polysemy
  build-depends:        base ^>=4.18.2.1
  hs-source-dirs:       src
  default-language:     GHC2021

test-suite hw-polysemy-test
  import:               base, project-config,
                        hw-polysemy,
  default-language:     GHC2021
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
  main-is:              Main.hs
  build-depends:        base ^>=4.18.2.1,
